#6 Fixed UI bugs on small devices

--- a/Tutel.EduWork/Tutel.EduWork.Client/Components/WorkSession/WorkSessionInfo.razor.css
+++ b/Tutel.EduWork/Tutel.EduWork.Client/Components/WorkSession/WorkSessionInfo.razor.css
@@ -11,11 +11,26 @@
 .timeRangeText {
     font-weight: bold;
     font-size: 1.3rem;
+    letter-spacing: 1.5px;
 }
 
 .subjectText {
     font-size: 1.1rem;
 }
 
-.workSession-editButton {
+@media (max-width: 900px)
+{
+    .titleText {
+        font-weight: bold;
+        font-size: 1rem;
+    }
+
+    .timeRangeText {
+        font-weight: bold;
+        font-size: 1rem;
+    }
+
+    .subjectText {
+        font-size: 0.9rem;
+    }
 }
